# zound

./: README.md  pyproject.toml  requirements.txt
src/: config_controller.py  event_handler.py  events.py  global_config.py  main.py  sound_controller.py  websocket_client.py  websocket_state.py
src/controllers/: config_controller.py  keyboard_controller.py  sound_controller.py
src/database/: models.py  sqlite.py
src/handlers/: config_handler.py  event_handler.py  global_event_handler.py  sound_handler.py
src/repositories/: abstract_repository.py  config.py  sound.py
src/services/: config.py  sound.py
src/utils/: errors.py  events.py  functions.py
