[project]
name = "Zound"
version = "1.1.0"
description = "A simple soundpad application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.2",
    "pynput>=1.8.2",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
